--- a/Farms.html
+++ b/Farms.html
@@ -55,6 +55,7 @@
 <li> <a class="page-scroll" href=Buildings.html>Buildings</a></li>
 <li> <a class="page-scroll" href=Businesses.html>Businesses</a></li>
 <li> <a class="page-scroll" href=Farms.html>Farms</a></li>
+<li> <a class="page-scroll" href=Streets.html>Streets</a></li>
           
         </ul>
       </div>
@@ -206,7 +207,7 @@
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2018 Chateaugay Historical Society. </br>
-      Last Modified [February 19, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+      Last Modified [March 08, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
