--- a/Buildings.html
+++ b/Buildings.html
@@ -55,6 +55,7 @@
 <li> <a class="page-scroll" href=Buildings.html>Buildings</a></li>
 <li> <a class="page-scroll" href=Businesses.html>Businesses</a></li>
 <li> <a class="page-scroll" href=Farms.html>Farms</a></li>
+<li> <a class="page-scroll" href=People.html>People</a></li>
 <li> <a class="page-scroll" href=Streets.html>Streets</a></li>
           
         </ul>
@@ -748,7 +749,7 @@ Is this block the “grand dame” of the remaining business blocks on Main Stre
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2018 Chateaugay Historical Society. </br>
-      Last Modified [March 31, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+      Last Modified [April 19, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
