--- a/Businesses.html
+++ b/Businesses.html
@@ -55,6 +55,7 @@
 <li> <a class="page-scroll" href=Buildings.html>Buildings</a></li>
 <li> <a class="page-scroll" href=Businesses.html>Businesses</a></li>
 <li> <a class="page-scroll" href=Farms.html>Farms</a></li>
+<li> <a class="page-scroll" href=People.html>People</a></li>
 <li> <a class="page-scroll" href=Streets.html>Streets</a></li>
           
         </ul>
@@ -69,6 +70,49 @@
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
+      <h2>Chateaugay Dairy's Delivery Driver Owen Murray</h2>
+      <hr>
+      <h5>April 18, 2021 | Mick Jarvis</h5>
+    </div>
+
+     <!-- Slideshow container -->
+<div class="slideshow-container">
+
+<!-- Full-width images with number and caption text -->
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">1 / 2</div>
+    <img src="blog/imgs/2021-04-18_chateaugaydairy-owenmurray/chateaugaydairy-owenmurray_1.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">2 / 2</div>
+    <img src="blog/imgs/2021-04-18_chateaugaydairy-owenmurray/chateaugaydairy-owenmurray_2.jpg" style="width:100%">
+  </div>
+
+
+      <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+</div>
+<br>
+
+
+        <div class="blog-text">
+        <p>Did you know Chateaugay had its own door to door delivery service back in the 1950s? This 1955 image shows one of Chateaugay Dairy's deilvery drivers, Owen Murray.</p>
+
+<p>The first image shows an overview of the photograph while the second shows a close up of Owen.</p>
+        </div>
+    </div>
+</div>
+
+
+<!-- Site Page -->
+<div id="blog2">
+  <div class="container">
+    <div class="section-title text-center center">
       <h2>East Main Street Postcard</h2>
       <hr>
       <h5>March 26, 2021 | Mick Jarvis</h5>
@@ -80,15 +124,15 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">1 / 1</div>
     <img src="blog/imgs/2021-03-26_eastmainstreetpostcard/eastmainstreetpostcard_01.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
 </div>
 <br>
 
@@ -117,7 +161,7 @@
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>West Main Street Pre WWI</h2>
@@ -131,51 +175,51 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">1 / 7</div>
     <img src="blog/imgs/2021-03-06_westmainstreetpreWWI/westmainstreetpreWWI_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">2 / 7</div>
     <img src="blog/imgs/2021-03-06_westmainstreetpreWWI/westmainstreetpreWWI_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">3 / 7</div>
     <img src="blog/imgs/2021-03-06_westmainstreetpreWWI/westmainstreetpreWWI_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">4 / 7</div>
     <img src="blog/imgs/2021-03-06_westmainstreetpreWWI/westmainstreetpreWWI_04.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">5 / 7</div>
     <img src="blog/imgs/2021-03-06_westmainstreetpreWWI/westmainstreetpreWWI_05.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">6 / 7</div>
     <img src="blog/imgs/2021-03-06_westmainstreetpreWWI/westmainstreetpreWWI_06.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">7 / 7</div>
     <img src="blog/imgs/2021-03-06_westmainstreetpreWWI/westmainstreetpreWWI_07.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
 </div>
 <br>
 
@@ -212,7 +256,7 @@
 
 
 <!-- Site Page -->
-<div id="blog1">
+<div id="blog2">
   <div class="container">
     <div class="section-title text-center center">
       <h2>East Main Street & Business Ads</h2>
@@ -226,171 +270,171 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">1 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">2 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">3 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">4 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_04.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">5 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_05.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">6 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_06.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">7 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_07.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">8 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_08.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">9 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_09.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">10 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_10.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">11 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_11.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">12 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_12.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">13 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_13.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">14 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_14.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">15 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_15.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">16 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_16.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">17 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_17.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">18 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_18.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">19 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_19.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">20 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_20.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">21 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_21.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">22 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_22.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">23 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_23.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">24 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_24.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">25 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_25.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">26 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_26.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">27 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_27.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 3)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 3)">&#10095;</a>
 </div>
 <br>
 
@@ -409,7 +453,7 @@
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Anderson Block</h2>
@@ -423,99 +467,99 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">1 / 15</div>
     <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">2 / 15</div>
     <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">3 / 15</div>
     <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">4 / 15</div>
     <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_04.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">5 / 15</div>
     <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_05.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">6 / 15</div>
     <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_06.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">7 / 15</div>
     <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_07.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">8 / 15</div>
     <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_08.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">9 / 15</div>
     <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_09.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">10 / 15</div>
     <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_10.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">11 / 15</div>
     <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_11.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">12 / 15</div>
     <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_12.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">13 / 15</div>
     <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_13.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">14 / 15</div>
     <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_14.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">15 / 15</div>
     <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_15.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 3)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 3)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 4)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 4)">&#10095;</a>
 </div>
 <br>
 
@@ -542,7 +586,7 @@ Is this block the “grand dame” of the remaining business blocks on Main Stre
 
 
 <!-- Site Page -->
-<div id="blog1">
+<div id="blog2">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Key Bank</h2>
@@ -556,33 +600,33 @@ Is this block the “grand dame” of the remaining business blocks on Main Stre
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">1 / 4</div>
     <img src="blog/imgs/2021-02-07_keybank/2021-02-07_keybank_1.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">2 / 4</div>
     <img src="blog/imgs/2021-02-07_keybank/2021-02-07_keybank_2.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">3 / 4</div>
     <img src="blog/imgs/2021-02-07_keybank/2021-02-07_keybank_3.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">4 / 4</div>
     <img src="blog/imgs/2021-02-07_keybank/2021-02-07_keybank_4.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 4)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 4)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 5)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 5)">&#10095;</a>
 </div>
 <br>
 
@@ -611,7 +655,7 @@ Is this block the “grand dame” of the remaining business blocks on Main Stre
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2018 Chateaugay Historical Society. </br>
-      Last Modified [March 31, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+      Last Modified [April 19, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
