--- a/blog.html
+++ b/blog.html
@@ -55,6 +55,7 @@
 <li> <a class="page-scroll" href=Buildings.html>Buildings</a></li>
 <li> <a class="page-scroll" href=Businesses.html>Businesses</a></li>
 <li> <a class="page-scroll" href=Farms.html>Farms</a></li>
+<li> <a class="page-scroll" href=People.html>People</a></li>
 <li> <a class="page-scroll" href=Streets.html>Streets</a></li>
           
         </ul>
@@ -69,6 +70,49 @@
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
+      <h2>Chateaugay Dairy's Delivery Driver Owen Murray</h2>
+      <hr>
+      <h5>April 18, 2021 | Mick Jarvis</h5>
+    </div>
+
+     <!-- Slideshow container -->
+<div class="slideshow-container">
+
+<!-- Full-width images with number and caption text -->
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">1 / 2</div>
+    <img src="blog/imgs/2021-04-18_chateaugaydairy-owenmurray/chateaugaydairy-owenmurray_1.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">2 / 2</div>
+    <img src="blog/imgs/2021-04-18_chateaugaydairy-owenmurray/chateaugaydairy-owenmurray_2.jpg" style="width:100%">
+  </div>
+
+
+      <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+</div>
+<br>
+
+
+        <div class="blog-text">
+        <p>Did you know Chateaugay had its own door to door delivery service back in the 1950s? This 1955 image shows one of Chateaugay Dairy's deilvery drivers, Owen Murray.</p>
+
+<p>The first image shows an overview of the photograph while the second shows a close up of Owen.</p>
+        </div>
+    </div>
+</div>
+
+
+<!-- Site Page -->
+<div id="blog2">
+  <div class="container">
+    <div class="section-title text-center center">
       <h2>East Main Street Postcard</h2>
       <hr>
       <h5>March 26, 2021 | Mick Jarvis</h5>
@@ -80,15 +124,15 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">1 / 1</div>
     <img src="blog/imgs/2021-03-26_eastmainstreetpostcard/eastmainstreetpostcard_01.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
 </div>
 <br>
 
@@ -117,7 +161,7 @@
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>West Main Street Pre WWI</h2>
@@ -131,51 +175,51 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">1 / 7</div>
     <img src="blog/imgs/2021-03-06_westmainstreetpreWWI/westmainstreetpreWWI_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">2 / 7</div>
     <img src="blog/imgs/2021-03-06_westmainstreetpreWWI/westmainstreetpreWWI_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">3 / 7</div>
     <img src="blog/imgs/2021-03-06_westmainstreetpreWWI/westmainstreetpreWWI_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">4 / 7</div>
     <img src="blog/imgs/2021-03-06_westmainstreetpreWWI/westmainstreetpreWWI_04.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">5 / 7</div>
     <img src="blog/imgs/2021-03-06_westmainstreetpreWWI/westmainstreetpreWWI_05.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">6 / 7</div>
     <img src="blog/imgs/2021-03-06_westmainstreetpreWWI/westmainstreetpreWWI_06.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">7 / 7</div>
     <img src="blog/imgs/2021-03-06_westmainstreetpreWWI/westmainstreetpreWWI_07.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
 </div>
 <br>
 
@@ -211,209 +255,12 @@
 </div>
 
 
-<!-- Site Page -->
-<div id="blog1">
-  <div class="container">
-    <div class="section-title text-center center">
-      <h2>East Main Street & Business Ads</h2>
-      <hr>
-      <h5>February 28, 2021 | Mick Jarvis</h5>
-    </div>
-
-     <!-- Slideshow container -->
-<div class="slideshow-container">
-
-<!-- Full-width images with number and caption text -->
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">1 / 27</div>
-    <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_01.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">2 / 27</div>
-    <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_02.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">3 / 27</div>
-    <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_03.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">4 / 27</div>
-    <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_04.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">5 / 27</div>
-    <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_05.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">6 / 27</div>
-    <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_06.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">7 / 27</div>
-    <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_07.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">8 / 27</div>
-    <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_08.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">9 / 27</div>
-    <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_09.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">10 / 27</div>
-    <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_10.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">11 / 27</div>
-    <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_11.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">12 / 27</div>
-    <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_12.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">13 / 27</div>
-    <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_13.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">14 / 27</div>
-    <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_14.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">15 / 27</div>
-    <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_15.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">16 / 27</div>
-    <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_16.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">17 / 27</div>
-    <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_17.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">18 / 27</div>
-    <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_18.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">19 / 27</div>
-    <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_19.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">20 / 27</div>
-    <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_20.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">21 / 27</div>
-    <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_21.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">22 / 27</div>
-    <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_22.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">23 / 27</div>
-    <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_23.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">24 / 27</div>
-    <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_24.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">25 / 27</div>
-    <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_25.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">26 / 27</div>
-    <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_26.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">27 / 27</div>
-    <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_27.jpg" style="width:100%">
-  </div>
-
-
-      <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
-</div>
-<br>
-
-
-        <div class="blog-text">
-        <p>A different approach this week… While researching how and when the Ogdensburg and Lake Champlain RR became the Rutland RR, I began reading the weekly issues of the Chateaugay Journal from 1896 and 1897, looking for news articles about the railroad. During all that, I came across a nice selection of ads run by local businesses and began saving them.</p>
-
-<p>Below are street scenes from that time and the actual ads. The first and second photos are of East Main St. The first shows downtown looking east from the Four Corners. The second shows farther out East Main. The lumberyard is recognizable on the right. Note that there is no Town Hall on the left. Construction of that would not begin until 1911. The next photo shows the wall ads for McKenna’s Pharmacy at the Four Corners. The fourth photo shows the painted name sign “Ryan & Franklin” from the alley behind what was Ryan’s Hardware (now the “Talk of the Town Pizza” shop.</p>
-
-<p>A little backstory on this fourth photo. Back in 2019 when remodeling was going on, I stopped one day and asked the contractor if sometime he might show me the back buildings (which used to be a tin shop where heating system ducts, etc. were made for the hardware’s installation business. The contractor handed me a flashlight and said: “sure, you can go back right now and check it out.” Grabbing my camera, I took a bunch of shots of the outside and inside of the back building. There are two ways to enter the tin shop space. By climbing a few stairs in the back, you can pass directly into the back while staying in the building. The second way is to go out the rear door into the alley and cross to a door on the tin shop’s lower level. That is where the Ryan & Franklin sign is painted. It is a bit difficult to make out in the photo but when it was done, over 100 years ago, it was clear and much brighter.</p>
-
-<p>Following these four photos are a selection of the ads that were printed in the Chateaugay Journal during “96 and ’97. They are a nice snap shot of business being conducted here 125 years ago.</p>
-        </div>
-    </div>
-</div>
-
-
 <!--Footer-->
 <div id="footer">
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2018 Chateaugay Historical Society. </br>
-      Last Modified [March 31, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+      Last Modified [April 19, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
