--- a/People.html
+++ b/People.html
@@ -57,6 +57,7 @@
 <li> <a class="page-scroll" href=Farms.html>Farms</a></li>
 <li> <a class="page-scroll" href=People.html>People</a></li>
 <li> <a class="page-scroll" href=Streets.html>Streets</a></li>
+<li> <a class="page-scroll" href=Transportation.html>Transportation</a></li>
           
         </ul>
       </div>
@@ -165,7 +166,7 @@
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2018 Chateaugay Historical Society. </br>
-      Last Modified [April 25, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+      Last Modified [May 09, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
