--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
  <!--COVID Banner -->
 <body>
   <div class="alert-box">
-    <span class="badge">COVID-19</span> We are currently closed to the public because of the COVID-19 pandemic. We will be opening when it is safe and appropriate to do so.
+    <span class="badge">COVID-19</span> We are currently closed to the public because of the COVID-19 pandemic. We will be reopening to the public on July 7, 2021. We look forward to seeing you soon!
   </div>  
 </body>
  	
@@ -486,7 +486,7 @@
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2021 Chateaugay Historical Society. </br>
-	  Last Modified [May 10, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+	  Last Modified [May 23, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
